lz4 and some fixes

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -3,6 +3,14 @@ project(gpak_externals)
 
 add_library(${PROJECT_NAME} gpakext.cpp)
 
+if(WIN32)
+add_subdirectory(libfmemopen)
+target_link_libraries(${PROJECT_NAME} PUBLIC libfmemopen)
+endif()
+
+find_package(OpenSSL REQUIRED)
+target_link_libraries(${PROJECT_NAME} PUBLIC OpenSSL::Crypto)
+
 find_package(ZLIB REQUIRED)
 target_link_libraries(${PROJECT_NAME} PUBLIC ZLIB::ZLIB)
 
